--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,17 @@
 	"repositories": [
 		{
 			"type": "composer",
-			"url" : "http://packages.zendframework.com/"
+			"url": "http://packages.zendframework.com/"
 		}
 	],
 	"minimum-stability": "dev",
 	"require": {
 		"cabinet/dbal": "dev-master",
-		"twig/twig"   : "1.10.x-dev",
+		"twig/twig": "1.10.x-dev",
 		"coss/bnetlib": "dev-master",
-		"fuel/cache"  : "dev-develop",
-		"jet/router"  : "dev-master"
+		"fuel/cache": "dev-develop",
+		"jet/router": "dev-master",
+		"dflydev/dot-access-configuration": "1.0.x-dev"
 	},
 	"autoload": {
 		"psr-0": { "Jyggen\\Raidtracker": "classes/" }
