Added symfony/yaml dependency.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"coss/bnetlib": "dev-master",
 		"fuel/cache": "dev-develop",
 		"jet/router": "dev-master",
-		"dflydev/dot-access-configuration": "1.0.x-dev"
+		"dflydev/dot-access-configuration": "1.0.x-dev",
+		"symfony/yaml": "2.2.x-dev"
 	},
 	"autoload": {
 		"psr-0": { "Jyggen\\Raidtracker": "classes/" }
